<resources>
    <string name="app_name">LimonadaMoneyApp</string>


    <!-- Loggon Activity -->
    <string name="label_tv_title">Credenciais</string>
    <string name="label_tv_name">Nome</string>
    <string name="label_tv_password">Senha</string>
    <string name="label_btn_cancel">Cancelar</string>
    <string name="label_btn_login">Login</string>
    <string name="error_no_name">Erro. Nome é Obrigatório!!!</string>
    <string name="error_no_password">Erro. Senha é Obrigatória!!!</string>
    <string name="error_invalid_credentials">Erro: Credenciais Invalidas!!!</string>

    <!-- PRINCIPAL FRAGMENT -->
    <string name="spn_periodo">Informe o Período :</string>
    <string-array name="periodo_array">
        <item>Acumulado</item>
        <item>Mensal</item>
        <item>Últimos 3 meses</item>
        <item>Últimos 6 meses</item>
        <item>Anual</item>
    </string-array>

    <!-- APONTAR FRAGMENT -->
    <string name="spn_tipo">Informe o Tipo do gasto:</string>
    <string-array name="tipo_gasto_array">
        <item>-</item>
        <item>Roupas</item>
        <item>Alimentação</item>
        <item>Apto</item>
        <item>Celular</item>
        <item>Carro / Moto / Uber</item>
        <item>Pessoais</item>
        <item>Cartão Crédito</item>
        <item>Empresa</item>
        <item>Gasolina / Alcool</item>
        <item>Outros</item>
    </string-array>

    <!-- CONSULTAR FRAGMENT -->
    <string name="spn_ordenar_por">Selecione o critério de exibição:</string>
    <string name="principal_txt_filtrar_label">Filtrar exibição por:</string>
    <string name="home_txt_organizar_title">Organizar por:</string>
    <string name="home_btn_apontar_gastos_title">Apontar Gastos</string>
    <string name="home_btn_consultar_gastos_title">Consultar Gastos</string>
    <string-array name="tipo_ordenar_array">
        <item>Mais atual</item>
        <item>Mais antiga</item>
        <item>Valor</item>
        <item>Tipo de gasto</item>
        <item>Descrição</item>
    </string-array>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

</resources>
